syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "FunctionRecordProto";
option java_multiple_files = true;

import "record_metadata_options.proto";
import "common/function_resource.proto";

//-----------------stored table-----------------------------
message FunctionRecord {
  required string function_name = 1;
  optional string class_name = 2;
  optional string owner_name = 3;
  optional string owner_type = 4;
  optional string function_type = 5;
  optional int64 create_time = 6;
  repeated ResourceUri resource_uris = 7;
}

message FunctionRecordUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required FunctionRecord function = 1;
}